To fix social logos wrap on phone view

--- a/src/main/css/footer.css
+++ b/src/main/css/footer.css
@@ -220,7 +220,7 @@ footer:nth-of-type(3){
 		padding-top: 10px;
 		position: absolute;
 		top: 16px;
-		left: 75%;
+		left: 68%;
 	}
 	.footer-organization .flex-container-nowrap div {
 		width: 50%;
